compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__numbers__preceeding_zeros_float.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/numbers.rs
assertion_line: 262
expression: "\npub fn main() {\n  09_179.1\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  09_179.1
}


----- COMPILED JAVASCRIPT
export function main() {
  return 9179.1;
}
