compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__numbers__preceeding_zeros_float_pattern.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/numbers.rs
assertion_line: 306
expression: "\npub fn main(x) {\n  let assert 09_179.1 = x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main(x) {
  let assert 09_179.1 = x
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function main(x) {
  if (!(x === 9179.1)) {
    throw makeError(
      "let_assert",
      FILEPATH,
      "my/mod",
      3,
      "main",
      "Pattern match failed, no pattern matched the value.",
      { value: x, start: 20, end: 43, pattern_start: 31, pattern_end: 39 }
    )
  }
  return x;
}
