compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__numbers__remainder.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/numbers.rs
assertion_line: 214
expression: "\npub fn go() {\n  5 % 0 // => 0\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go() {
  5 % 0 // => 0
}


----- COMPILED JAVASCRIPT
export function go() {
  return 0;
}
