compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__numbers__remainder_by_non_zero_int.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/numbers.rs
assertion_line: 547
expression: "pub fn main() {\n  1 % 2\n}"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() {
  1 % 2
}

----- COMPILED JAVASCRIPT
export function main() {
  return 1 % 2;
}
