compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__numbers__remainder_by_zero_int.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/numbers.rs
assertion_line: 538
expression: "pub fn main() {\n  1 % 0\n}"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() {
  1 % 0
}

----- COMPILED JAVASCRIPT
export function main() {
  return 0;
}
