compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__numbers__underscore_after_binary_prefix.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/numbers.rs
assertion_line: 342
expression: "\npub fn main() {\n  0b_10_01\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  0b_10_01
}


----- COMPILED JAVASCRIPT
export function main() {
  return 0b10_01;
}
